# marx

./: .gitignore  README.md  autoinvest.py  autoquotas.py  autowage.py  balance.py  marx.py  marxcli.py  pyproject.toml  rest.py  script.py
_old/: __mappers.py
config/: autoi.cfg  autoq.cfg  paths.cfg  styles.xlsx  wage.cfg  wageparser.cfg
marx/: __cli.py  __init__.py  __main__.py  __marx.py  api.py  cli.py  factory.py  mappers.py  marx.py  models.py  util.py
marx/automation/: __init__.py  __loans.py  distribution.py  loans.py  paycheckparser.py  wageparser.py
marx/cli/: __init__.py  cli.py  userconfig.py  util.py  wrapper.py
marx/model/: __init__.py  adapters.py  collection.py  loans.py  mappers.py  models.py
marx/models/: __init__.py  mappers.py  models.py
marx/reporting/: __init__.py  __table.py  balance.py  excel.py  report.py  table.py
marx/util/: __collection.py  __init__.py  factory.py  pathfinder.py  util.py
scripts/: ago24org.py  allpaychecks.py  apply_recategorize_excel.py  auotinvest.py  autoinvest.py  autoquotas.py  autowage.py  balance.py  balance_sheet.py  check_app.py  check_loans.py  fix_loans.py  fix_transfer_categories.py  generic.py  jul24org.py  lookback.py  prepare_recategorize_excel.py  upgourmet.py  wrapped.py  x_loans_apply.py  x_loans_prepare.py  x_recat_apply.py  x_recat_prepare.py
tests/: __test_collection.py  __test_wageparser.py  mock_report.py  test_cli.py  test_cli_wrapper.py  test_data_manip.py  test_distr.py  test_factory.py  test_loans.py  test_mapper.py  test_new_cats.py  test_paycheckparser.py  test_wageparser.py
(+24 files in other folders)
