[tool.poetry]
name = "marx"
version = "0.1.0"
description = "Gestión de contabilidad personal"
authors = ["angmorpri <angelmorenoprieto@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^10.5.0"
openpyxl = "^3.1.5"
PyPDF2 = "^3.0.1"
python-dateutil = "^2.9.0.post0"
toml = "^0.10.2"
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.8"

[tool.poetry.scripts]
marx = "marx.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
